--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,10 @@ dependencies = [
     "jupyter>=1.1.1",
     "mediapipe>=0.10.21",
     "opencv-python>=4.11.0.86",
+    "pandas>=2.0.0",
+    "numpy>=1.24.0",
+    "matplotlib>=3.7.0",
+    "pose2sim>=0.10.0",
+    "tensorflow>=2.13.0",
 ]
+
