--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "tensorflow>=2.13.0",
     "onnxruntime-gpu>=1.23.0",
     "django>=6.0.1",
+    "torch>=2.9.1",
 ]
 
 [dependency-groups]
