packaging: Add PyInstaller build support with simplified workflow
Features:
- Automatic browser opening when server starts
- Clear terminal banner with server status and stop instructions (Ctrl+C)
- Platform-specific spec files (Linux, macOS, Windows)
- Build script wrapper (./scripts/packaging/build.sh) - no manual flags needed
- Optional launcher script for double-clicking from file managers
- All build outputs in bin/ directory (executables + build artifacts)

Implementation:
- Entry point: scripts/packaging/pyinstaller_entry.py
  - Auto-opens browser when server is ready
  - Shows clear startup banner with instructions
  - Supports both GUI and CLI modes
- Build script: scripts/packaging/build.sh
  - Automatically handles -y, --distpath, --workpath flags
  - Detects platform or accepts argument (linux|macos|windows)
  - Clean, simple build process
- Launcher: scripts/packaging/create_launcher.sh
  - Generates HumanPose3D.sh wrapper
  - Opens app in terminal window (gnome-terminal, konsole, xfce4, xterm)
  - Useful for file manager double-clicking

Documentation:
- Added comprehensive table of contents to README.md
- Updated build instructions in README.md and CLAUDE.md
- Added usage examples for all platforms
- Documented output paths and build artifacts

Output structure:
- Executables: bin/HumanPose3D-<platform>/
- Build artifacts: bin/build/ (gitignored)
- No more build/ or dist/ in repo root

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # Python-generated files
 __pycache__/
 *.py[oc]
-build/
+bin/
 dist/
 wheels/
 *.egg-info
+
+# Launcher (auto-generated)
+HumanPose3D.sh
 
 # Virtual environments
 .venv
