--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "pandas>=2.0.0",
     "numpy>=1.24.0",
     "matplotlib>=3.7.0",
+    "pillow>=10.2.0",
+    "pytesseract>=0.3.13",
     "pose2sim>=0.10.0",
     "tensorflow>=2.13.0",
     "onnxruntime-gpu>=1.23.0",
@@ -26,8 +28,6 @@ neural = [
     "einops>=0.8.1",
     "ezc3d>=1.5.0",
     "tensorboard>=2.18.0",
-    "torch>=2.9.1",
     "torchvision>=0.24.1",
     "tqdm>=4.66.0",
 ]
-
