--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,9 @@ neural = [
     "torchvision>=0.24.1",
     "tqdm>=4.66.0",
 ]
+
+[tool.uv]
+required-environments = [
+    "sys_platform == 'linux' and platform_machine == 'x86_64'",
+    "sys_platform == 'win32' and platform_machine == 'AMD64'",
+]
